--- a/Fetch App /views/new.ejs
+++ b/Fetch App /views/new.ejs
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Pet</title>
-</head>
+
+<%-include ('./partials/head.ejs') %>
+    <%- include ('./partials/header.ejs') %>
+
 <body>
-    <h1>Add a New Pet</h1>
-    <form action="/fetch" method="POST">
-        <input type="text" placeholder="Owner First Name">
-        <input type="text" placeholder="Owner Last Name">
-        <input type="text" placeholder="Name of Pet">
-        <input type="text" placeholder="Color of Pet">
-        <input type="text" placeholder="Size of Pet">
-        <input type="text" placeholder="Age of Pet">
+    <div id="newPupHeader">
+        <h1>Add a New Pup</h1>
+    </div>
+    <form action="/fetch" method="POST" enctype="multipart/form-data">
+        <strong>
+        First Name<br> <input type="text" name="ownerFirstName" placeholder="Owner First Name"><br><br>
+        Last Name <br> <input type="text" name="ownerLastName" placeholder="Owner Last Name"><br><br>
+        Pet Name <br> <input type="text" name="nameOfPet" placeholder="Name of Pet"><br><br>
+        Pet Color <br> <input type="text" name="colorOfPet" placeholder="Color of Pet"><br><br>
+        Pet Size <br> <input type="text" name="sizeOfPet" placeholder="Size of Pet"><br><br>
+        Pet Age <br> <input type="number" name="ageOfPet" placeholder="Age of Pet"><br><br>
+        Upload Photo <br><input type="file" id="uploadPhoto" name="uploadPhoto" accept="image/png, image/jpeg, image/jpg" />
+    </strong>
+        <!-- Upload Vaccines <br> <input id="file" type="file"><br>
+        <button>Upload</button><br><br> -->
+        <input id="addNew" type="submit" name="" value="Add a Pup">
     </form>
+
 </body>
+<%- include ('./partials/footer.ejs') %>
 </html>
