--- a/Fetch App /views/show.ejs
+++ b/Fetch App /views/show.ejs
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pet Page</title>
-</head>
-<body>
-    <h1><%=pet.name%>'s Page</h1>
-    <div class="petProfile">
-        <%=pet.name%>
-    </div>
 
+<%-include ('./partials/head.ejs') %>
+    <%- include ('./partials/header.ejs') %>
+
+<body>
+    <div>
+        <h1 id="showName">
+            <%=showOne.nameOfPet%>'s Page
+        </h1>
+    </div><br>
+    <div>
+        <%=showOne.nameOfPet%>
+    </div>
+    <br>
+    <form id="deleteBtn" action="/fetch/<%=showOne._id%>?_method=DELETE" method="POST">
+        <input type="submit" value="DELETE">
+    </form>
+    <br><br><br>
     <nav>
         <a href="/fetch">Back to Main</a>
+        <br><br><br>
     </nav>
+    <a href="/fetch/<%=showOne.id; %>/edit">Edit</a>
 </body>
+
+<%- include ('./partials/footer.ejs') %>
 </html>
