--- a/Fetch App /views/partials/head.ejs
+++ b/Fetch App /views/partials/head.ejs
@@ -1,7 +1,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fetch Index</title>
+    <title>Fetch</title>
     <link rel="stylesheet" href="/css/app.css">
     <script src="https://kit.fontawesome.com/a47001bced.js" crossorigin="anonymous"></script>
 </head>
