--- a/Fetch App /views/Userejs/showUser.ejs
+++ b/Fetch App /views/Userejs/showUser.ejs
@@ -39,7 +39,7 @@
         <a href="/fetch">Back to Main</a>
         <br><br><br>
     </nav>
-    <a href="/fetch/<%=showUser.id; %>/edit">Edit</a>
+    <a href="/fetchUser/<%=showUser.id; %>/edit">Edit</a>
 </body>
 
 <%- include ('./partials/footer.ejs') %>
