--- a/Fetch App /public/css/app.css
+++ b/Fetch App /public/css/app.css
@@ -11,7 +11,7 @@
 }
 
 .newPup{
-    background-color: #FF7E51;
+    background-color: white; 
     color: white; 
     padding: 0.5rem;
     font-family: sans-serif;
