--- a/Fetch App /views/Userejs/newUser.ejs
+++ b/Fetch App /views/Userejs/newUser.ejs
@@ -8,7 +8,7 @@
     <div id="newUser">
         <h1>Add a New User</h1>
     </div>
-    <form action="/fetchUser"  method="POST">
+    <form action="/fetchUser/newUser"  method="POST">
         <strong>
         First Name<br> <input type="text" name="ownerFirstName" placeholder="Owner First Name"><br><br>
         Last Name <br> <input type="text" name="ownerLastName" placeholder="Owner Last Name"><br><br>
