--- a/Fetch App /views/partials/header.ejs
+++ b/Fetch App /views/partials/header.ejs
@@ -1,7 +1,9 @@
 <header>
-    <img id="fetchLogo" src="/imgs/fetch park logo.png" width="200px" height="100px" alt="Fetch logo" />
-    <a href="/views/showUser.ejs"><img id="avatarImg" src="/imgs/female avatar.png" width="100px" height="100px" alt="avatar template"/></a>
     <div id="mainIndex">
-    <br>
-    <hr class="solid">
+        <img id="fetchLogo" src="/imgs/fetch park logo.png" width="200px" height="100px" alt="Fetch logo" />
+        <a href="/fetchUser/indexUser"><img id="avatarImg" src="/imgs/female avatar.png" width="100px" height="100px"
+                alt="avatar template" /></a>
+        <br>
+        <hr class="solid">
+    </div>
 </header>
