--- a/Fetch-App/views/show.ejs
+++ b/Fetch-App/views/show.ejs
@@ -11,19 +11,19 @@
         </h1>
     </div><br>
     <div>
-        <%=showOne.nameOfPet%>
+        Pet Name: <%=showOne.nameOfPet%>
     </div>
     <br>
     <div>
-        <%=showOne.colorOfPet%>
+       Pet Color:  <%=showOne.colorOfPet%>
     </div>
     <br>
     <div>
-        <%=showOne.sizeOfPet%>
+       Pet Size:  <%=showOne.sizeOfPet%>
     </div>
     <br>
     <div>
-        <%=showOne.ageOfPet%>
+       Pet Age  <%=showOne.ageOfPet%>
     </div>
     <br>
     <form id="deleteBtn" action="/fetch/<%=showOne._id%>?_method=DELETE" method="POST">
