added more view elements to the index page

--- a/Fetch-App/views/index.ejs
+++ b/Fetch-App/views/index.ejs
@@ -26,6 +26,11 @@
                         <%=fetchPup[i].ownerFirstName%>
                             <%=fetchPup[i].ownerLastName%>
                         </div>
+                        <br>
+                        <div>
+                            <%=fetchPup[i].colorOfPet%>
+                            <%=fetchPup[i].sizeOfPet%>
+                        </div>
                     </div>
                     <br>
                     <% }%>
