--- a/Fetch-App/views/show.ejs
+++ b/Fetch-App/views/show.ejs
@@ -23,7 +23,7 @@
     </div>
     <br>
     <div>
-       Pet Age  <%=showOne.ageOfPet%>
+       Pet Age: <%=showOne.ageOfPet%>
     </div>
     <br>
     <form id="deleteBtn" action="/fetch/<%=showOne._id%>?_method=DELETE" method="POST">
