--- a/Fetch-App/public/css/app.css
+++ b/Fetch-App/public/css/app.css
@@ -90,3 +90,12 @@ header{
     float:right;
     margin-right: 200px; 
 }
+
+#indexSize{ 
+    float: right;
+    margin-right: 400px;
+}
+#indexColor{
+    padding-top: 10px; 
+    margin-left: 200px; 
+}
