changed the background of the New Pup

--- a/Fetch-App/public/css/app.css
+++ b/Fetch-App/public/css/app.css
@@ -11,7 +11,7 @@
 }
 
 .newPup{
-    background-color: white; 
+    background-color: #FF7E51; 
     color: white; 
     padding: 0.5rem;
     font-family: sans-serif;
