added some more CSS

--- a/Fetch-App/views/edit.ejs
+++ b/Fetch-App/views/edit.ejs
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit a Pup</title>
-    <link rel="stylesheet" href="/css/app.css"/>
+    <link rel="stylesheet" href="/css/app.css" />
     <script src="https://kit.fontawesome.com/a47001bced.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <h1>Edit <%=fetchPup.nameOfPet%>'s Page</h1>
+    <h1 class="editHeader">Edit <%=fetchPup.nameOfPet%>'s Page</h1>
     <form action="/fetch/<%=fetchPup.id%>?_method=PUT" method="POST">
         <input type="text" placeholder="Pet Name" name="nameofPet" value="<%=fetchPup.nameOfPet%>"><br><br>
-        <input type="text" placeholder="Owner First Name" name="ownerFirstName" value="<%=fetchPup.ownerFirstName%>"><br><br>
-        <input type="text" placeholder="Owner Last Name" name="ownerLastName" value="<%=fetchPup.ownerLastName%>"><br><br>
+        <input type="text" placeholder="Owner First Name" name="ownerFirstName"
+            value="<%=fetchPup.ownerFirstName%>"><br><br>
+        <input type="text" placeholder="Owner Last Name" name="ownerLastName"
+            value="<%=fetchPup.ownerLastName%>"><br><br>
         <input type="text" placeholder="color" name="colorOfPet" value="<%=fetchPup.colorOfPet%>"><br><br>
         <input type="text" placeholder="size" name="sizeOfPet" value="<%=fetchPup.sizeOfPet%>"><br><br>
         <input type="number" placeholder="age" name="ageofPet" value="<%=fetchPup.ageOfPet%>"><br><br>
-        <input type="submit" name="" value="Save Changes"/>
+        <input type="submit" name="" value="Save Changes" />
     </form>
 </body>
+
 </html>
