--- a/Fetch-App/views/index.ejs
+++ b/Fetch-App/views/index.ejs
@@ -4,7 +4,7 @@
 <%-include ('./partials/head.ejs') %>
     <%- include ('./partials/header.ejs') %>
         <br>
-        <h1>Pet Profiles</h1>
+        <h1 class="editHeader">Pet Profiles</h1>
         </div>
         <br>
         <div>
