undid previous changes

--- a/Fetch-App/views/index.ejs
+++ b/Fetch-App/views/index.ejs
@@ -4,7 +4,7 @@
 <%-include ('./partials/head.ejs') %>
     <%- include ('./partials/header.ejs') %>
         <br>
-        <h1 class="editHeader">Pet Profiles</h1>
+        <h1>Pet Profiles</h1>
         </div>
         <br>
         <div>
@@ -30,9 +30,9 @@
                         <br>
                         <div id="indexColor">
                             <%=fetchPup[i].colorOfPet%>
-                        </div>
-                        <div id="indexSize">
-                            <%=fetchPup[i].sizeOfPet%>
+                            </div>
+                            <div id="indexSize">
+                                <%=fetchPup[i].sizeOfPet%>
                         </div>
                     </div>
                     <br>
