--- a/Fetch-App/views/show.ejs
+++ b/Fetch-App/views/show.ejs
@@ -4,39 +4,38 @@
 <%-include ('./partials/head.ejs') %>
     <%- include ('./partials/header.ejs') %>
 
-        <body>
-            <div>
-                <h1 class="editHeader">
-                    <%=showOne.nameOfPet%>'s Page
-                </h1>
-            </div><br>
-            <div>
-                Pet Name: <%=showOne.nameOfPet%>
-            </div>
-            <br>
-            <div>
-                Pet Color: <%=showOne.colorOfPet%>
-            </div>
-            <br>
-            <div>
-                Pet Size: <%=showOne.sizeOfPet%>
-            </div>
-            <br>
-            <div>
-                Pet Age: <%=showOne.ageOfPet%>
-            </div>
-            <br>
-            <form id="deleteBtn" action="/fetch/<%=showOne._id%>?_method=DELETE" method="POST">
-                <input type="submit" value="DELETE">
-            </form>
-            <br><br><br>
-            <nav>
-                <a href="/fetch">Back to Main</a>
-                <br><br><br>
-            </nav>
-            <a href="/fetch/<%=showOne.id; %>/edit">Edit</a>
-        </body>
+<body>
+    <div>
+        <h1 id="showName">
+            <%=showOne.nameOfPet%>'s Page
+        </h1>
+    </div><br>
+    <div>
+        Pet Name: <%=showOne.nameOfPet%>
+    </div>
+    <br>
+    <div>
+       Pet Color:  <%=showOne.colorOfPet%>
+    </div>
+    <br>
+    <div>
+       Pet Size:  <%=showOne.sizeOfPet%>
+    </div>
+    <br>
+    <div>
+       Pet Age: <%=showOne.ageOfPet%>
+    </div>
+    <br>
+    <form id="deleteBtn" action="/fetch/<%=showOne._id%>?_method=DELETE" method="POST">
+        <input type="submit" value="DELETE">
+    </form>
+    <br><br><br>
+    <nav>
+        <a href="/fetch">Back to Main</a>
+        <br><br><br>
+    </nav>
+    <a href="/fetch/<%=showOne.id; %>/edit">Edit</a>
+</body>
 
-        <%- include ('./partials/footer.ejs') %>
-
+<%- include ('./partials/footer.ejs') %>
 </html>
