--- a/Fetch-App/views/new.ejs
+++ b/Fetch-App/views/new.ejs
@@ -8,7 +8,7 @@
             <div id="newPupHeader">
                 <h1>Add a New Pup</h1>
             </div>
-            <form action="/fetch/new" method="POST">
+            <form action="/fetch" method="POST">
                 <strong>
                     First Name<br> <input type="text" name="ownerFirstName" placeholder="Owner First Name"><br><br>
                     Last Name <br> <input type="text" name="ownerLastName" placeholder="Owner Last Name"><br><br>
